# study-copilot

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
backend/: app.py  auth.py  conftest.py  errors.py  jobs.py  persistance_backend.py  persistence_backend.py  registry.py  routes.py  test_persistence_backend.py  test_persistence_backend.py‎  test_registry.py  test_routes.py  test_tokens.py  tokens.py
crewai_core/: entry_status.py  flow.py  flow_id.py  flow_id.py‎  performance_tracker.py  run_academic_planner.py  run_flow.py  run_syllabus_analyst.py  test_entry_status.py  test_flow.py  test_flow_id.py  test_wellbeing_monitor.py  wellbeing_monitor.py
crewai_core/crews/academic_planner/: crew.py  scheduling.py  test_crew.py
crewai_core/crews/assessment_designer/: crew.py  guardrails.py  test_crew.py
crewai_core/crews/plan_generator/: crew.py  guardrails.py  test_crew.py  test_guardrails.py
crewai_core/crews/plan_optimizer/: crew.py  guardrails.py  test_crew.py  test_guardrails.py
crewai_core/crews/syllabus_analyst/: crew.py  guardrails.py  test_crew.py
crewai_core/crews/syllabus_extractor/: guardrails.py  test_guardrails.py
crewai_core/fixtures/: sample_calendar.json  sample_syllabi.json
crewai_core/models/: calendar.py  flow_state.py  plan_revision.py  quiz.py  quiz_attempt.py  study_plan.py  syllabus.py  weak_topic.py  wellbeing_flag.py
frontend/src/hooks/: useAuthToken.ts  useJobPoll.ts  usePlan.ts  useQuiz.ts  useSetEntryStatus.ts  useSyllabi.ts  useWellbeing.ts
scripts/: free-dev-ports.js
(+22 files in other folders)
