[project]
name = "crewai-core"
version = "0.1.0"
description = "Adaptive Study Planning System - CrewAI Flow/Crew core (no UI, no server, no DB)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai>=1.14.4",
    "python-dotenv>=1.2.2",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]
